Refactor and enhance documentation in image processing scripts
- Updated `_typos.toml` for improved clarity on ignored words and exceptions.
- Translated usage instructions in `lint.sh` from Japanese to English for better accessibility.
- Removed commented-out Japanese text in `main.go` and `processor.go` to streamline code.
- Simplified comments in `processor_test.go` to focus on functionality without excessive detail.
- Improved consistency in comments across the codebase, ensuring clarity and readability.

--- a/_typos.toml
+++ b/_typos.toml
@@ -1,13 +1,13 @@
 [default]
 #words
 extend-ignore-words-re = [
-  #固有名詞
+  #Proper nouns
 
-  #false positive
+  #False positives
   "ba"
 
-  #許容
-  #typoだが原文をrespectしたい場合
+  #Exceptions
+  #Cases where we want to respect the original text despite typos
 
 ]
 
